--- a/harmonify/package.json
+++ b/harmonify/package.json
@@ -20,7 +20,10 @@
         "vue": "^3.5.12"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^10.0.0",
         "animejs": "^3.2.2",
-        "firebase": "^11.0.1"
+        "chart.js": "^4.4.6",
+        "firebase": "^11.0.1",
+        "vue-chartjs": "^5.3.2"
     }
 }
