--- a/harmonify/package.json
+++ b/harmonify/package.json
@@ -24,7 +24,10 @@
         "animejs": "^3.2.2",
         "apexcharts": "^4.0.0",
         "chart.js": "^4.4.6",
+        "chartjs-plugin-annotation": "^3.1.0",
         "firebase": "^11.0.1",
+        "flowbite": "^2.5.2",
+        "flowbite-vue": "^0.1.6",
         "vue-chartjs": "^5.3.2",
         "vuetify": "^3.7.4"
     }
