--- a/harmonify/package.json
+++ b/harmonify/package.json
@@ -24,6 +24,7 @@
         "animejs": "^3.2.2",
         "chart.js": "^4.4.6",
         "firebase": "^11.0.1",
-        "vue-chartjs": "^5.3.2"
+        "vue-chartjs": "^5.3.2",
+        "vuetify": "^3.7.4"
     }
 }
