--- a/harmonify/package.json
+++ b/harmonify/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.5.12"
     },
     "dependencies": {
+        "@mdi/font": "^7.4.47",
         "@vuepic/vue-datepicker": "^10.0.0",
         "@vueup/vue-quill": "^1.2.0",
         "animejs": "^3.2.2",
