--- a/harmonify/package.json
+++ b/harmonify/package.json
@@ -23,6 +23,7 @@
         "@mdi/font": "^7.4.47",
         "animejs": "^3.2.2",
         "firebase": "^11.0.1",
+        "flowbite": "^2.5.2",
         "vue-chartjs": "^5.3.2",
         "vuetify": "^3.7.4"
     }
